fixed gap between sections

--- a/style/_main.scss
+++ b/style/_main.scss
@@ -1,3 +1,9 @@
+.main {
+  display: flex;
+  flex-direction: column;
+  row-gap: 50px;
+}
+
 .container-fluid {
   width: 100%;
 }
@@ -117,8 +123,7 @@
 }
 
 section {
-
-  .title{
+  .title {
     font-size: 28px;
     line-height: 38px;
     font-weight: 700;
@@ -136,15 +141,13 @@ section {
 }
 
 .services {
-  margin-top: 50px;
-
   .title {
     text-align: center;
     margin-bottom: 15px;
   }
   .paragraph {
     text-align: center;
-    color: $typography-gray
+    color: $typography-gray;
   }
 
   .cards {
@@ -156,12 +159,11 @@ section {
       box-shadow: 2px 11px 30px rgba(51, 51, 51, 0.08);
       border-radius: 10px;
 
-      &:last-child{
+      &:last-child {
         margin-bottom: 0;
       }
 
       .image {
-
       }
       .content {
         margin-left: 20px;
@@ -184,4 +186,3 @@ section {
     }
   }
 }
-
