--- a/style/style.css
+++ b/style/style.css
@@ -163,6 +163,12 @@ header .main-navbar .layout .actions .wrapper:hover .navigation {
   display: block;
 }
 
+.main {
+  display: flex;
+  flex-direction: column;
+  row-gap: 50px;
+}
+
 .container-fluid {
   width: 100%;
 }
@@ -271,9 +277,6 @@ section .paragraph {
   line-height: 22px;
 }
 
-.services {
-  margin-top: 50px;
-}
 .services .title {
   text-align: center;
   margin-bottom: 15px;
@@ -426,6 +429,9 @@ section .paragraph {
   header .navbar .main-navbar .actions .wrapper .navigation .nav-bar .item a:hover svg path {
     fill: #00730c;
   }
+  .main {
+    row-gap: 100px;
+  }
   .general {
     flex-direction: row;
     background: linear-gradient(79.58deg, rgba(0, 115, 12, 0.579) -39.14%, rgba(251, 246, 238, 0) 90.23%);
@@ -531,9 +537,6 @@ section .paragraph {
   section .paragraph {
     font-size: 16px;
     line-height: 30px;
-  }
-  .services {
-    margin-top: 100px;
   }
   .services .title {
     margin-bottom: 30px;
